Set up file structure for AVL tree

--- a/Project1_3501/Project1_3501.vcxproj
+++ b/Project1_3501/Project1_3501.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AVL_Tree.cpp" />
     <ClCompile Include="binary_search_tree.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AVL_Tree.h" />
     <ClInclude Include="binary_search_tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
